tests/ui/mismatched_types/binops.stderr
error[E0277]: cannot add `Option<{integer}>` to `{integer}`
  --> $DIR/binops.rs:2:7
   |
LL |     1 + Some(1);
   |       ^ no implementation for `{integer} + Option<{integer}>`
   |
   = help: the trait `Add<Option<{integer}>>` is not implemented for `{integer}`
   = help: the following other types implement trait `Add<Rhs>`:
             <isize as Add>
             <isize as Add<&isize>>
             <i8 as Add>
             <i8 as Add<&i8>>
             <i16 as Add>
             <i16 as Add<&i16>>
             <i32 as Add>
             <i32 as Add<&i32>>
           and 48 others

error[E0277]: cannot subtract `Option<{integer}>` from `usize`
  --> $DIR/binops.rs:3:16
   |
LL |     2 as usize - Some(1);
   |                ^ no implementation for `usize - Option<{integer}>`
   |
   = help: the trait `Sub<Option<{integer}>>` is not implemented for `usize`
   = help: the following other types implement trait `Sub<Rhs>`:
             <usize as Sub>
             <usize as Sub<&usize>>
             <&'a usize as Sub<usize>>
             <&usize as Sub<&usize>>

error[E0277]: cannot multiply `{integer}` by `()`
  --> $DIR/binops.rs:4:7
   |
LL |     3 * ();
   |       ^ no implementation for `{integer} * ()`
   |
   = help: the trait `Mul<()>` is not implemented for `{integer}`
   = help: the following other types implement trait `Mul<Rhs>`:
             <isize as Mul>
             <isize as Mul<&isize>>
             <i8 as Mul>
             <i8 as Mul<&i8>>
             <i16 as Mul>
             <i16 as Mul<&i16>>
             <i32 as Mul>
             <i32 as Mul<&i32>>
           and 49 others

error[E0277]: cannot divide `{integer}` by `&str`
  --> $DIR/binops.rs:5:7
   |
LL |     4 / "";
   |       ^ no implementation for `{integer} / &str`
   |
   = help: the trait `Div<&str>` is not implemented for `{integer}`
   = help: the following other types implement trait `Div<Rhs>`:
             <isize as Div>
             <isize as Div<&isize>>
             <i8 as Div>
             <i8 as Div<&i8>>
             <i16 as Div>
             <i16 as Div<&i16>>
             <i32 as Div>
             <i32 as Div<&i32>>
           and 54 others

error[E0277]: can't compare `{integer}` with `String`
  --> $DIR/binops.rs:6:7
   |
LL |     5 < String::new();
   |       ^ no implementation for `{integer} < String` and `{integer} > String`
   |
   = help: the trait `PartialOrd<String>` is not implemented for `{integer}`
   = help: the following other types implement trait `PartialOrd<Rhs>`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and 6 others

error[E0277]: can't compare `{integer}` with `Result<{integer}, _>`
  --> $DIR/binops.rs:7:7
   |
LL |     6 == Ok(1);
   |       ^^ no implementation for `{integer} == Result<{integer}, _>`
   |
   = help: the trait `PartialEq<Result<{integer}, _>>` is not implemented for `{integer}`
   = help: the following other types implement trait `PartialEq<Rhs>`:
             isize
             i8
             i16
             i32
             i64
             i128
             usize
             u8
           and 6 others

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0277`.
